# ardupilot

./: RP2350_BUILD.md  RP2350_HARDWARE_ARCHITECTURE.md
Tools/ardupilotwaf/: boards.py  rp2350.py
libraries/AP_Filesystem/: AP_Filesystem.h
libraries/AP_HAL/board/: rp2350.h
libraries/AP_HAL_RP2350/: AP_HAL_RP2350.h  GPIO.cpp  GPIO.h  HAL_RP2350_Class.cpp  HAL_RP2350_Class.h  HAL_RP2350_Namespace.h  Scheduler.cpp  Scheduler.h  Semaphores.cpp  Semaphores.h  Storage.cpp  Storage.h  UARTDriver.cpp  UARTDriver.h  Util.cpp  Util.h  system.cpp
libraries/AP_HAL_RP2350/hwdef/rp2350minimal/: hwdef.h
libraries/AP_HAL_RP2350/targets/rp2350/: CMakeLists.txt  FreeRTOSConfig.h  main.c
libraries/AP_HAL_RP2350/targets/rp2350/pico/: config_autogen.h  version.h
